--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v_to_sha256",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Generates sha256 hash value from a provided string or returns false in case of an error.",
   "main": "index.js",
   "scripts": {
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/V-core9/v-to-sha256.git"
+    "url": "git+https://github.com/V-core9/v_to_sha256.git"
   },
   "keywords": ["sha256","hashing", "sha256 hash"],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/V-core9/v-to-sha256/issues"
+    "url": "https://github.com/V-core9/v_to_sha256/issues"
   },
-  "homepage": "https://github.com/V-core9/v-to-sha256#readme",
+  "homepage": "https://github.com/V-core9/v_to_sha256#readme",
   "devDependencies": {
     "jest": "^27.3.1"
   }
