--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v_to_sha256",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Generates sha256 hash value from a provided string or returns false in case of an error.",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,8 @@
     "v-core9",
     "security",
     "password",
-    "password hashing"
+    "password hashing",
+    "async"
   ],
   "author": "slavko.vuletic92@gmail.com",
   "license": "MIT",
