--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v_to_sha256",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Generates sha256 hash value from a provided string or returns false in case of an error.",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/V-core9/v_to_sha256#readme",
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "faker": "^5.5.3"
   }
 }
