--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [
     "sha256",
-    "hashing", 
+    "hashing",
     "sha256 hash",
     "sha256 hash generator",
     "crypto",
@@ -29,7 +29,10 @@
   },
   "homepage": "https://github.com/V-core9/v_to_sha256#readme",
   "devDependencies": {
-    "jest": "^27.3.1",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "jest": "^27.3.1"
+  },
+  "dependencies": {
+    "v_is_empty_value": "^1.0.7"
   }
 }
